kube/k8s-resources.yaml
apiVersion: v1
kind: Service
metadata:
  name: nl-hello-world
  labels:
    app: nl-hello-world
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: nl-hello-world
    version: v1
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nl-hello-world-v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: nl-hello-world
        version: v1
    spec:
      containers:
      - name: nl-hello-world
        image: eu.gcr.io/nl-obp-mgmt-services-lla9/nl-hello-world:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        livenessProbe:
          exec:
            command:
            - /app/healthcheck.sh
          initialDelaySeconds: 45
          periodSeconds: 3
        readinessProbe:
          exec:
            command:
            - /app/healthcheck.sh
          initialDelaySeconds: 30
          periodSeconds: 5
        resources:
          requests:
            memory: "250Mi"
            cpu: "250m"
          limits:
            memory: "500Mi"
            cpu: "500m"
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: nl-hello-world
spec:
  rules:
  - host: nl-apis-dev.nl-opendata.local
    http:
      paths:
      - backend:
          serviceName: nl-hello-world
          servicePort: 8080
        path: /hello-api
  tls:
  - hosts:
    - nl-apis-dev.dpe-opendata.com
    secretName: ing-tls-secret
